--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@vueuse/motion": "^3.0.3",
+    "animejs": "^4.1.2",
     "pinia": "^3.0.3",
     "swiper": "^11.2.10",
     "vue": "^3.5.17",
+    "vue-particle-effect-buttons": "^1.0.4",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
