--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@tresjs/cientos": "^4.3.1",
+    "@tresjs/core": "^4.3.6",
+    "@types/matter-js": "^0.19.8",
     "@vueuse/motion": "^3.0.3",
     "animejs": "^4.1.2",
     "gsap": "^3.13.0",
+    "matter-js": "^0.20.0",
     "pinia": "^3.0.3",
     "swiper": "^11.2.10",
+    "three": "^0.178.0",
     "vue": "^3.5.17",
     "vue-particle-effect-buttons": "^1.0.4",
     "vue-router": "^4.3.0"
@@ -23,6 +28,7 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^20.12.5",
+    "@types/three": "^0.178.1",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/tsconfig": "^0.5.1",
