--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@tsconfig/node22": "^22.0.0",
+    "@tsconfig/node22": "^22.0.2",
     "@types/node": "^20.12.5",
     "@types/three": "^0.178.1",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^6.1.2",
-    "typescript": "~5.4.0",
+    "typescript": "^5.9.2",
     "vite": "^5.2.8",
     "vite-plugin-vue-devtools": "^7.2.1",
     "vue-tsc": "^2.0.11"
